--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="yelcho.mydemo.comprouting.controller.Home" 
+<mvc:View controllerName="yelcho.mydemo.nestcomprouting.controller.Home" 
   xmlns:mvc="sap.ui.core.mvc" 
   xmlns="sap.m" 
   displayBlock="true">
