--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="yelcho.mydemo.nestcomprouting.controller.App" 
+<mvc:View controllerName="yelcho.mydemo.nestcomproute.controller.App" 
   xmlns="sap.m" 
   xmlns:mvc="sap.ui.core.mvc" 
   xmlns:tnt="sap.tnt" 
